--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@popperjs/core": "^2.11.6",
     "ag-grid-angular": "^31.3.2",
     "ag-grid-community": "^31.3.2",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
